fix: make hero cut corner work on mobile

--- a/src/components/Hero/component.module.css
+++ b/src/components/Hero/component.module.css
@@ -35,8 +35,8 @@
   &::before {
     content: "";
     position: absolute;
-    inset-block-start: -0.5px;
-    inset-inline-start: -0.5px;
+    inset-block-start: 0;
+    inset-inline-start: 0;
     inline-size: var(--cut);
     block-size: var(--cut);
     background-color: var(--jahia-border);
